--- a/my-nextjs-app/app/globals.css
+++ b/my-nextjs-app/app/globals.css
@@ -1,42 +1,36 @@
+/* General */
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+/* Indicate non-functional links */
+a[href="#"] {
+  cursor: not-allowed;
+
+  &:hover {
+    text-decoration-line: line-through;
   }
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
+.ams-details {
+  color: var(--ams-color-primary-black);
+  font-family: var(--ams-text-font-family);
+  font-size: var(--ams-text-level-6-font-size);
+  font-weight: var(--ams-text-font-weight-normal);
+  line-height: var(--ams-text-level-6-line-height);
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+  summary {
+    cursor: var(--ams-action-activate-cursor);
+    width: max-content;
+  }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+  code {
+    font-size: 75%;
+    line-height: 2;
   }
 }
