--- a/my-react-router-app/app/app.css
+++ b/my-react-router-app/app/app.css
@@ -1,12 +1,41 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+/* General */
 
-html,
+:root {
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+}
+
 body {
-  @apply bg-white dark:bg-gray-950;
+  display: unset;
+  margin: unset;
+}
 
-  @media (prefers-color-scheme: dark) {
-    color-scheme: dark;
+/* Indicate non-functional links */
+a[href="#"] {
+  cursor: not-allowed;
+
+  &:hover {
+    text-decoration-line: line-through;
+  }
+}
+
+.ams-details {
+  color: var(--ams-color-primary-black);
+  font-family: var(--ams-text-font-family);
+  font-size: var(--ams-text-level-6-font-size);
+  font-weight: var(--ams-text-font-weight-normal);
+  line-height: var(--ams-text-level-6-line-height);
+
+  summary {
+    cursor: var(--ams-action-activate-cursor);
+    width: max-content;
+  }
+
+  code {
+    font-size: 75%;
+    line-height: 2;
   }
 }
